--- a/src/main/resources/blaplafla/todolist/views/gui/IndexGui.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/IndexGui.fxml
@@ -13,14 +13,14 @@
                         <MenuItem fx:id="openfile" mnemonicParsing="false" onAction="#openFile" text="Open file" />
                         <MenuItem fx:id="savefile" mnemonicParsing="false" onAction="#saveFile" text="Save file" />
                         <MenuItem fx:id="username" mnemonicParsing="false" onAction="#setUsername" text="Username" />
-                        <MenuItem fx:id="language" mnemonicParsing="false" text="Language" />
+                        <MenuItem fx:id="language" mnemonicParsing="false" onAction="#setLanguage" text="Language" />
                     </items>
                 </Menu>
                 <Menu fx:id="task" mnemonicParsing="false" text="ListTask">
                     <items>
-                        <MenuItem fx:id="undonelist" mnemonicParsing="false" text="Undone List" />
-                        <MenuItem fx:id="donelist" mnemonicParsing="false" text="Done List" />
-                        <MenuItem fx:id="addtask" mnemonicParsing="false" text="Add task" />
+                        <MenuItem fx:id="undonelist" mnemonicParsing="false" onAction="#undoneList" text="Undone List" />
+                        <MenuItem fx:id="donelist" mnemonicParsing="false" onAction="#doneList" text="Done List" />
+                        <MenuItem fx:id="addtask" mnemonicParsing="false" onAction="#add" text="Add task" />
                     </items>
                 </Menu>
             </menus>
