--- a/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="400.0" style="-fx-background-color: white;"
             xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="blaplafla.todolist.views.gui.IndexGui">
+            fx:controller="blaplafla.todolist.views.gui.Index">
     <MenuBar layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="407.0" AnchorPane.leftAnchor="9.0"
              AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="15.0">
         <Menu fx:id="file" mnemonicParsing="false" text="File">
