--- a/src/main/resources/blaplafla/todolist/views/gui/Error.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Error.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane prefHeight="164.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.Error">
-   <children>
-      <Label fx:id="error" layoutX="34.0" layoutY="14.0" prefHeight="69.0" prefWidth="532.0" text="Label">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Button fx:id="ok" layoutX="251.0" layoutY="83.0" mnemonicParsing="false" onAction="#cancel" prefHeight="52.0" prefWidth="99.0" text="OK" textAlignment="CENTER">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-   </children>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="164.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16"
+            fx:controller="blaplafla.todolist.views.gui.Error">
+    <Label fx:id="error" layoutX="34.0" layoutY="14.0" prefHeight="69.0" prefWidth="532.0" text="Label">
+        <font>
+            <Font size="20.0"/>
+        </font>
+    </Label>
+    <Button fx:id="ok" layoutX="251.0" layoutY="83.0" mnemonicParsing="false" onAction="#cancel" prefHeight="52.0"
+            prefWidth="99.0" text="OK" textAlignment="CENTER">
+        <font>
+            <Font name="System Bold" size="15.0"/>
+        </font>
+    </Button>
 </AnchorPane>
