--- a/src/main/resources/blaplafla/todolist/views/gui/SaveFile.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/SaveFile.fxml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="182.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.SaveFile">
-    <Label fx:id="overwrite" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="14.0" prefHeight="29.0" prefWidth="471.0" text="Warning overwrite data" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="14.0">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="182.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18"
+            fx:controller="blaplafla.todolist.views.gui.SaveFile">
+    <Label fx:id="overwrite" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="14.0" prefHeight="29.0"
+           prefWidth="471.0" text="Warning overwrite data" textAlignment="CENTER" AnchorPane.leftAnchor="15.0"
+           AnchorPane.topAnchor="14.0">
         <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="20.0"/>
         </font>
     </Label>
-    <Button fx:id="cancel" layoutX="14.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" prefHeight="44.0" prefWidth="100.0" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
-    <Button fx:id="ok" layoutX="245.0" layoutY="72.0" mnemonicParsing="false" onAction="#accept" prefHeight="44.0" prefWidth="100.0" text="Accept" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="13.0" />
-   <Label fx:id="filepath" layoutX="15.0" layoutY="51.0" prefHeight="29.0" prefWidth="471.0" text="File Path: blablabla">
-      <font>
-         <Font name="System Bold" size="20.0" />
-      </font>
-   </Label>
-   <Button fx:id="changePath" layoutX="200.0" layoutY="128.0" mnemonicParsing="false" onAction="#changePath" prefHeight="44.0" prefWidth="100.0" text="Change Path" AnchorPane.bottomAnchor="10.0" />
+    <Button fx:id="cancel" layoutX="14.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" prefHeight="44.0"
+            prefWidth="100.0" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"/>
+    <Button fx:id="ok" layoutX="245.0" layoutY="72.0" mnemonicParsing="false" onAction="#accept" prefHeight="44.0"
+            prefWidth="100.0" text="Accept" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="13.0"/>
+    <Label fx:id="filepath" layoutX="15.0" layoutY="51.0" prefHeight="29.0" prefWidth="471.0"
+           text="File Path: blablabla">
+        <font>
+            <Font name="System Bold" size="20.0"/>
+        </font>
+    </Label>
+    <Button fx:id="changePath" layoutX="200.0" layoutY="128.0" mnemonicParsing="false" onAction="#changePath"
+            prefHeight="44.0" prefWidth="100.0" text="Change Path" AnchorPane.bottomAnchor="10.0"/>
 </AnchorPane>
