--- a/src/main/resources/blaplafla/todolist/views/gui/TaskListCell.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/TaskListCell.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane fx:id="anchorPane" prefHeight="97.0" xmlns="http://javafx.com/javafx/18"
-            xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="97.0"
+            xmlns="http://javafx.com/javafx/18">
     <Label fx:id="title" layoutX="5.0" layoutY="5.0" text="Title">
         <font>
             <Font name="System Bold" size="20.0"/>
