--- a/src/main/resources/blaplafla/todolist/views/gui/FileChooser.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/FileChooser.fxml
@@ -3,25 +3,32 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="262.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16"
-            fx:controller="blaplafla.todolist.views.gui.OpenFile">
-    <Label fx:id="filepath" layoutX="15.0" layoutY="22.0" text="FilePath" AnchorPane.leftAnchor="15.0"
-           AnchorPane.topAnchor="22.0">
+<AnchorPane prefHeight="171.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.OpenFile">
+    <GridPane layoutX="15.0" layoutY="22.0" prefHeight="29.0" prefWidth="471.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label fx:id="filepath" text="FilePath">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="name" onInputMethodTextChanged="#check" onMouseClicked="#handle" prefHeight="29.0"
+                   prefWidth="285.0" GridPane.columnIndex="1"/>
+    </GridPane>
+   <ButtonBar layoutX="8.0" layoutY="124.0" prefHeight="30.0" prefWidth="471.0">
+      <buttons>
+          <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+          <Button fx:id="ok" mnemonicParsing="false" onAction="#accept" text="Accept" />
+      </buttons>
+   </ButtonBar>
+    <Label fx:id="overwrite" layoutX="15.0" layoutY="82.0" prefHeight="18.0" prefWidth="471.0" text="Warning: close current session?" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0">
         <font>
-            <Font name="System Bold" size="20.0"/>
-        </font>
-    </Label>
-    <TextField fx:id="name" layoutX="15.0" layoutY="58.0" onInputMethodTextChanged="#check" onMouseClicked="#handle"
-               prefHeight="26.0" prefWidth="471.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0"
-               AnchorPane.topAnchor="58.0"/>
-    <Button fx:id="cancel" layoutX="14.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" text="Cancel"
-            AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"/>
-    <Button fx:id="ok" layoutX="245.0" layoutY="72.0" mnemonicParsing="false" onAction="#accept" text="Accept"
-            AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="13.0"/>
-    <Label fx:id="overwrite" layoutX="15.0" layoutY="109.0" prefHeight="18.0" prefWidth="471.0"
-           text="Warning: close current session?" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0">
-        <font>
-            <Font size="16.0"/>
+            <Font size="16.0" />
         </font>
     </Label>
 </AnchorPane>
