--- a/src/main/resources/blaplafla/todolist/views/gui/SaveFile.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/SaveFile.fxml
@@ -3,25 +3,43 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="182.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18"
-            fx:controller="blaplafla.todolist.views.gui.SaveFile">
-    <Label fx:id="overwrite" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="14.0" prefHeight="29.0"
-           prefWidth="471.0" text="Warning overwrite data" textAlignment="CENTER" AnchorPane.leftAnchor="15.0"
-           AnchorPane.topAnchor="14.0">
-        <font>
-            <Font name="System Bold" size="20.0"/>
-        </font>
-    </Label>
-    <Button fx:id="cancel" layoutX="14.0" layoutY="72.0" mnemonicParsing="false" onAction="#cancel" prefHeight="44.0"
-            prefWidth="100.0" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"/>
-    <Button fx:id="ok" layoutX="245.0" layoutY="72.0" mnemonicParsing="false" onAction="#accept" prefHeight="44.0"
-            prefWidth="100.0" text="Accept" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="13.0"/>
-    <Label fx:id="filepath" layoutX="15.0" layoutY="51.0" prefHeight="29.0" prefWidth="471.0"
-           text="File Path: blablabla">
-        <font>
-            <Font name="System Bold" size="20.0"/>
-        </font>
-    </Label>
-    <Button fx:id="changePath" layoutX="200.0" layoutY="128.0" mnemonicParsing="false" onAction="#changePath"
-            prefHeight="44.0" prefWidth="100.0" text="Change Path" AnchorPane.bottomAnchor="10.0"/>
+<AnchorPane prefHeight="182.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.SaveFile">
+    <GridPane layoutX="12.0" layoutY="4.0" prefHeight="172.0" prefWidth="471.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label fx:id="overwrite" alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="471.0"
+               text="Warning overwrite data" textAlignment="CENTER">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+        </Label>
+        <GridPane alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="44.0" prefWidth="471.0"
+                  GridPane.rowIndex="2">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0"/>
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <Button fx:id="cancel" alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                    onAction="#cancel" prefHeight="44.0" prefWidth="100.0" text="Cancel"/>
+            <Button fx:id="changePath" contentDisplay="CENTER" mnemonicParsing="false" onAction="#changePath"
+                    prefHeight="44.0" prefWidth="100.0" text="Change Path" GridPane.columnIndex="1"/>
+            <Button fx:id="ok" mnemonicParsing="false" onAction="#accept" prefHeight="44.0" prefWidth="100.0"
+                    text="Accept" GridPane.columnIndex="2"/>
+        </GridPane>
+        <Label fx:id="filepath" prefHeight="29.0" prefWidth="471.0" text="File Path: blablabla" GridPane.rowIndex="1">
+            <font>
+                <Font name="System Bold" size="20.0"/>
+            </font>
+        </Label>
+    </GridPane>
 </AnchorPane>
