--- a/src/main/resources/blaplafla/todolist/views/gui/Undone.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Undone.fxml
@@ -1,57 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="702.0" prefWidth="447.0"
-            style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
-            fx:controller="blaplafla.todolist.views.gui.Undone">
-    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="110.0" prefHeight="518.0" prefWidth="429.0"
-              AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"/>
-    <GridPane layoutX="9.0" layoutY="628.0" prefHeight="29.0" prefWidth="365.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.topAnchor="628.0">
+
+<AnchorPane prefHeight="702.0" prefWidth="447.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.Undone">
+    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="110.0" prefHeight="518.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" />
+    <GridPane layoutX="9.0" layoutY="628.0" prefHeight="29.0" prefWidth="365.0" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="628.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <Label fx:id="prev" onMouseClicked="#prev" text="Prev">
             <font>
-                <Font size="18.0"/>
+                <Font size="18.0" />
             </font>
         </Label>
         <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="1">
             <font>
-                <Font size="18.0"/>
+                <Font size="18.0" />
             </font>
         </Label>
     </GridPane>
-    <GridPane layoutX="14.0" layoutY="21.0" prefHeight="30.0" prefWidth="409.0" AnchorPane.leftAnchor="9.0"
-              AnchorPane.rightAnchor="9.0">
+    <GridPane layoutX="14.0" layoutY="21.0" prefHeight="30.0" prefWidth="409.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <Label fx:id="undone" text="Undone list">
             <font>
-                <Font name="System Bold" size="20.0"/>
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" text="Refresh"
-                GridPane.columnIndex="1"/>
+        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0" text="Refresh" GridPane.columnIndex="1" />
     </GridPane>
-    <ButtonBar layoutX="9.0" layoutY="66.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="30.0" prefWidth="429.0"
-               AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
-        <buttons>
-            <Button fx:id="detail" mnemonicParsing="false" onAction="#detail" text="Detail"/>
-            <Button fx:id="toggle" mnemonicParsing="false" onAction="#toggle" text="Toggle"/>
-            <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" text="Delete"/>
-            <Button fx:id="add" mnemonicParsing="false" onAction="#add" text="Add"/>
-        </buttons>
-    </ButtonBar>
+   <GridPane layoutX="89.9000015258789" layoutY="62.900001525878906" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0">
+      <columnConstraints>
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+            <Button fx:id="detail" mnemonicParsing="false" onAction="#detail" prefWidth="80.0" text="Detail" GridPane.columnIndex="3" />
+            <Button fx:id="toggle" mnemonicParsing="false" onAction="#toggle" prefWidth="80.0" text="Toggle" GridPane.columnIndex="2" />
+            <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" prefWidth="80.0" text="Delete" GridPane.columnIndex="1" />
+            <Button fx:id="add" mnemonicParsing="false" onAction="#add" prefWidth="80.0" text="Add" />
+   </GridPane>
 </AnchorPane>
