--- a/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCell.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/SubTaskListCell.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane fx:id="anchorPane" prefHeight="52.5" prefWidth="350.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.text.Font?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="52.5" prefWidth="350.0"
+            xmlns="http://javafx.com/javafx/16">
     <GridPane layoutX="3.0" layoutY="3.0" prefHeight="29.0" prefWidth="343.0" AnchorPane.bottomAnchor="5.0"
               AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
