--- a/src/main/resources/blaplafla/todolist/views/gui/FileChooser.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/FileChooser.fxml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane prefHeight="171.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.OpenFile">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="171.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18"
+            fx:controller="blaplafla.todolist.views.gui.OpenFile">
     <GridPane layoutX="15.0" layoutY="22.0" prefHeight="29.0" prefWidth="471.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <Label fx:id="filepath" text="FilePath">
             <font>
-                <Font name="System Bold" size="20.0" />
+                <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <TextField fx:id="name" onInputMethodTextChanged="#check" onMouseClicked="#handle" prefHeight="29.0" prefWidth="285.0" GridPane.columnIndex="1" />
+        <TextField fx:id="name" onInputMethodTextChanged="#check" onMouseClicked="#handle" prefHeight="29.0"
+                   prefWidth="285.0" GridPane.columnIndex="1"/>
     </GridPane>
-   <ButtonBar layoutX="8.0" layoutY="124.0" prefHeight="30.0" prefWidth="471.0">
-      <buttons>
-          <Button fx:id="cancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-          <Button fx:id="ok" mnemonicParsing="false" onAction="#accept" text="Accept" />
-      </buttons>
-   </ButtonBar>
-    <Label fx:id="overwrite" layoutX="15.0" layoutY="82.0" prefHeight="18.0" prefWidth="471.0" text="Warning: close current session?" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0">
+    <ButtonBar layoutX="8.0" layoutY="124.0" prefHeight="30.0" prefWidth="471.0">
+        <buttons>
+            <Button fx:id="cancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cancel"
+                    text="Cancel"/>
+            <Button fx:id="ok" mnemonicParsing="false" onAction="#accept" text="Accept"/>
+        </buttons>
+    </ButtonBar>
+    <Label fx:id="overwrite" layoutX="15.0" layoutY="82.0" prefHeight="18.0" prefWidth="471.0"
+           text="Warning: close current session?" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="14.0">
         <font>
-            <Font size="16.0" />
+            <Font size="16.0"/>
         </font>
     </Label>
 </AnchorPane>
