--- a/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
@@ -3,58 +3,66 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="742.0" prefWidth="447.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blaplafla.todolist.views.gui.Index">
-    <TextField fx:id="usernameField" layoutX="10.0" layoutY="54.0" onAction="#doneSetUsername" onInputMethodTextChanged="#doneSetUsername" prefHeight="26.0" prefWidth="429.0" promptText="aaa" scaleZ="10.0" style="-fx-view-order: 500;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="8.0" />
-    <MenuBar layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="15.0">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="742.0" prefWidth="447.0"
+            style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
+            fx:controller="blaplafla.todolist.views.gui.Index">
+    <TextField fx:id="usernameField" layoutX="10.0" layoutY="54.0" onAction="#doneSetUsername"
+               onInputMethodTextChanged="#doneSetUsername" prefHeight="26.0" prefWidth="429.0" promptText="aaa"
+               scaleZ="10.0" style="-fx-view-order: 500;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="8.0"/>
+    <MenuBar layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="429.0" style="-fx-view-order: 1;"
+             AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="15.0">
         <Menu fx:id="file" mnemonicParsing="false" text="File">
-            <MenuItem fx:id="openfile" mnemonicParsing="false" onAction="#openFile" text="Open file" />
-            <MenuItem fx:id="savefile" mnemonicParsing="false" onAction="#saveFile" text="Save file" />
-            <MenuItem fx:id="username" mnemonicParsing="false" onAction="#setUsername" text="Username" />
-            <MenuItem fx:id="language" mnemonicParsing="false" onAction="#setLanguage" text="Language" />
+            <MenuItem fx:id="openfile" mnemonicParsing="false" onAction="#openFile" text="Open file"/>
+            <MenuItem fx:id="savefile" mnemonicParsing="false" onAction="#saveFile" text="Save file"/>
+            <MenuItem fx:id="username" mnemonicParsing="false" onAction="#setUsername" text="Username"/>
+            <MenuItem fx:id="language" mnemonicParsing="false" onAction="#setLanguage" text="Language"/>
         </Menu>
         <Menu fx:id="task" mnemonicParsing="false" text="ListTask">
-            <MenuItem fx:id="undonelist" mnemonicParsing="false" onAction="#undoneList" text="Undone List" />
-            <MenuItem fx:id="donelist" mnemonicParsing="false" onAction="#doneList" text="Done List" />
-            <MenuItem fx:id="addtask" mnemonicParsing="false" onAction="#add" text="Add task" />
+            <MenuItem fx:id="undonelist" mnemonicParsing="false" onAction="#undoneList" text="Undone List"/>
+            <MenuItem fx:id="donelist" mnemonicParsing="false" onAction="#doneList" text="Done List"/>
+            <MenuItem fx:id="addtask" mnemonicParsing="false" onAction="#add" text="Add task"/>
         </Menu>
     </MenuBar>
     <GridPane layoutX="9.0" layoutY="85.0" prefHeight="30.0" prefWidth="365.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <Label fx:id="undone" text="Undone list">
             <font>
-                <Font name="System Bold" size="20.0" />
+                <Font name="System Bold" size="20.0"/>
             </font>
         </Label>
-        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0" text="Refresh" GridPane.columnIndex="1" />
+        <Button fx:id="refresh" mnemonicParsing="false" onAction="#addData" prefHeight="30.0" prefWidth="80.0"
+                text="Refresh" GridPane.columnIndex="1"/>
     </GridPane>
-    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="125.0" prefHeight="518.0" prefWidth="429.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" />
-    <Label fx:id="lastDone" layoutX="10.0" layoutY="684.0" text="Last Done Task: aaa " AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="684.0">
+    <ListView fx:id="listViewTask" layoutX="9.0" layoutY="125.0" prefHeight="518.0" prefWidth="429.0"
+              AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0"/>
+    <Label fx:id="lastDone" layoutX="10.0" layoutY="684.0" text="Last Done Task: aaa " AnchorPane.leftAnchor="10.0"
+           AnchorPane.topAnchor="684.0">
         <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="20.0"/>
         </font>
     </Label>
     <GridPane layoutX="9.0" layoutY="663.0" prefHeight="29.0" prefWidth="365.0" AnchorPane.topAnchor="655.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <Label fx:id="prev" onMouseClicked="#prev" text="Prev">
             <font>
-                <Font size="18.0" />
+                <Font size="18.0"/>
             </font>
         </Label>
         <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="1">
             <font>
-                <Font size="18.0" />
+                <Font size="18.0"/>
             </font>
         </Label>
     </GridPane>
