--- a/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
+++ b/src/main/resources/blaplafla/todolist/views/gui/Index.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="742.0" prefWidth="447.0"
             style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18"
             fx:controller="blaplafla.todolist.views.gui.Index">
@@ -47,9 +47,11 @@
             <Font name="System Bold" size="20.0"/>
         </font>
     </Label>
-    <GridPane layoutX="9.0" layoutY="663.0" prefHeight="29.0" prefWidth="365.0" AnchorPane.topAnchor="655.0">
+    <GridPane layoutX="10.0" layoutY="643.0" prefHeight="25.0" prefWidth="429.0" AnchorPane.leftAnchor="10.0"
+              AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="650.0" GridPane.rowIndex="2">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"/>
         </columnConstraints>
         <rowConstraints>
@@ -60,7 +62,12 @@
                 <Font size="18.0"/>
             </font>
         </Label>
-        <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="1">
+        <Label fx:id="next" onMouseClicked="#next" text="Next" textAlignment="RIGHT" GridPane.columnIndex="2">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label fx:id="pageLabel" layoutX="10.0" layoutY="10.0" text="Page 1" GridPane.columnIndex="1">
             <font>
                 <Font size="18.0"/>
             </font>
